--- a/K9 Backstory using Granite.ipynb
+++ b/K9 Backstory using Granite.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ef5816eb",
    "metadata": {},
    "outputs": [
@@ -53,16 +53,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>The Stones of Blood</td>\n",
-       "      <td>Romana</td>\n",
-       "      <td>Doctor Master recovered the Great Seal and the...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>The Invisible Enemy</td>\n",
+       "      <td>Leela</td>\n",
+       "      <td>I was designed by Professor Marius for his own...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <th>69</th>\n",
        "      <td>School Reunion</td>\n",
        "      <td>Sarah Jane</td>\n",
-       "      <td>Doctor Master and mistress Sarah Jane lead the...</td>\n",
+       "      <td>My sensors had detected a strange phenomenon. ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>The Underworld</td>\n",
+       "      <td>Leela</td>\n",
+       "      <td>Doctor Master and Mistress succeeded in locati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Warrior's Gate</td>\n",
+       "      <td>Romana</td>\n",
+       "      <td>Adric and I left to save Mistress Romana, but ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>The Underworld</td>\n",
+       "      <td>Leela</td>\n",
+       "      <td>As the R1C blasted away, loaded with the slave...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -70,15 +88,21 @@
       ],
       "text/plain": [
        "                  title    mistress  \\\n",
-       "29  The Stones of Blood      Romana   \n",
-       "71       School Reunion  Sarah Jane   \n",
+       "0   The Invisible Enemy       Leela   \n",
+       "69       School Reunion  Sarah Jane   \n",
+       "11       The Underworld       Leela   \n",
+       "67       Warrior's Gate      Romana   \n",
+       "12       The Underworld       Leela   \n",
        "\n",
        "                                             synopsis  \n",
-       "29  Doctor Master recovered the Great Seal and the...  \n",
-       "71  Doctor Master and mistress Sarah Jane lead the...  "
+       "0   I was designed by Professor Marius for his own...  \n",
+       "69  My sensors had detected a strange phenomenon. ...  \n",
+       "11  Doctor Master and Mistress succeeded in locati...  \n",
+       "67  Adric and I left to save Mistress Romana, but ...  \n",
+       "12  As the R1C blasted away, loaded with the slave...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +110,82 @@
    "source": [
     "df = pd.read_csv('k9_stories_500.csv')\n",
     "print(f\"{len(df)} rows in the data.\")\n",
-    "df.sample(2)"
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "02595828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: typing_extensions in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (4.12.2)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install -U typing_extensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d6005e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ollama in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (0.4.7)\r\n",
+      "Requirement already satisfied: httpx<0.29,>=0.27 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from ollama) (0.28.1)\r\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.9.0 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from ollama) (2.10.6)\r\n",
+      "Requirement already satisfied: anyio in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from httpx<0.29,>=0.27->ollama) (3.5.0)\r\n",
+      "Requirement already satisfied: certifi in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from httpx<0.29,>=0.27->ollama) (2023.7.22)\r\n",
+      "Requirement already satisfied: httpcore==1.* in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from httpx<0.29,>=0.27->ollama) (1.0.7)\r\n",
+      "Requirement already satisfied: idna in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from httpx<0.29,>=0.27->ollama) (3.4)\r\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from httpcore==1.*->httpx<0.29,>=0.27->ollama) (0.14.0)\r\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (0.7.0)\r\n",
+      "Requirement already satisfied: pydantic-core==2.27.2 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (2.27.2)\r\n",
+      "Requirement already satisfied: typing-extensions>=4.12.2 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from pydantic<3.0.0,>=2.9.0->ollama) (4.12.2)\r\n",
+      "Requirement already satisfied: sniffio>=1.1 in /Users/richardhopkins/miniconda3/lib/python3.9/site-packages (from anyio->httpx<0.29,>=0.27->ollama) (1.2.0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c60e2ca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'TypeIs' from 'typing_extensions' (/Users/richardhopkins/miniconda3/lib/python3.9/site-packages/typing_extensions.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mollama\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/ollama/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mollama\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_client\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AsyncClient, Client\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mollama\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_types\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m   ChatResponse,\n\u001b[1;32m      4\u001b[0m   EmbeddingsResponse,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     17\u001b[0m   Tool,\n\u001b[1;32m     18\u001b[0m )\n\u001b[1;32m     20\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     21\u001b[0m   \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAsyncClient\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     22\u001b[0m   \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChatResponse\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTool\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     38\u001b[0m ]\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/ollama/_client.py:25\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     11\u001b[0m   Any,\n\u001b[1;32m     12\u001b[0m   Callable,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     22\u001b[0m   overload,\n\u001b[1;32m     23\u001b[0m )\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjson_schema\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m JsonSchemaValue\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mollama\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m convert_function_to_tool\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sys\u001b[38;5;241m.\u001b[39mversion_info \u001b[38;5;241m<\u001b[39m (\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m9\u001b[39m):\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pydantic/json_schema.py:48\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping_extensions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Annotated, Literal, TypeAlias, assert_never, deprecated, final\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwarnings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PydanticDeprecatedSince26, PydanticDeprecatedSince29\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_internal\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     49\u001b[0m     _config,\n\u001b[1;32m     50\u001b[0m     _core_metadata,\n\u001b[1;32m     51\u001b[0m     _core_utils,\n\u001b[1;32m     52\u001b[0m     _decorators,\n\u001b[1;32m     53\u001b[0m     _internal_dataclass,\n\u001b[1;32m     54\u001b[0m     _mock_val_ser,\n\u001b[1;32m     55\u001b[0m     _schema_generation_shared,\n\u001b[1;32m     56\u001b[0m     _typing_extra,\n\u001b[1;32m     57\u001b[0m )\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mannotated_handlers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GetJsonSchemaHandler\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m JsonDict, JsonValue\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pydantic/_internal/_core_utils.py:12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping_extensions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TypeGuard, get_args, get_origin\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01merrors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PydanticUserError\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _repr\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_core_metadata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CoreMetadata\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_typing_extra\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m is_generic_alias, is_type_alias_type\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pydantic/_internal/_repr.py:11\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Any\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtyping_extensions\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _typing_extra\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m typing\u001b[38;5;241m.\u001b[39mTYPE_CHECKING:\n\u001b[1;32m     14\u001b[0m     ReprArgs: typing_extensions\u001b[38;5;241m.\u001b[39mTypeAlias \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtyping.Iterable[tuple[str | None, Any]]\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pydantic/_internal/_typing_extra.py:15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TYPE_CHECKING, Any, Callable\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtyping_extensions\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping_extensions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TypeIs, deprecated, get_args, get_origin\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_namespace_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GlobalsNamespace, MappingNamespace, NsResolver, get_module_ns_of\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sys\u001b[38;5;241m.\u001b[39mversion_info \u001b[38;5;241m<\u001b[39m (\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m10\u001b[39m):\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'TypeIs' from 'typing_extensions' (/Users/richardhopkins/miniconda3/lib/python3.9/site-packages/typing_extensions.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import ollama"
    ]
   },
   {
@@ -881,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
