--- a/Granite Embeddings.ipynb
+++ b/Granite Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7087c025",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4dab87ed",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "af496d2e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6d821073",
    "metadata": {},
    "outputs": [],
@@ -43,22 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "1e21ddfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = \"granite3.1-dense:2b\"\n",
-    "#gen_model = \"llama3-chatqa:8b\"\n",
-    "#embed_model = \"nomic-embed-text\"\n",
+    "gen_model = \"granite3-moe:3b\"\n",
     "embed_model = \"granite-embedding:30m\"\n",
-    "#embed_model = \"granite-embedding:278m\"\n",
     "collection_name = \"k9_ltm_gran_30m\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "180e8e3e",
    "metadata": {},
    "outputs": [],
@@ -68,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "02aa82c4-8067-42df-9a41-e21d41628d7b",
    "metadata": {},
    "outputs": [],
@@ -80,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "6153e7c6-cb57-4486-b6ff-fd656e1d4c41",
    "metadata": {},
    "outputs": [],
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "37fb649a-1a07-4fb5-b3f7-6cda4c56f0bb",
    "metadata": {},
    "outputs": [],
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bae2a97d-a643-4a78-93a6-d3ef5534e9d4",
    "metadata": {},
    "outputs": [
@@ -165,22 +162,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The Invisible Enemy</td>\n",
-       "      <td>Leela</td>\n",
-       "      <td>I was put to the test when the Doctor received...</td>\n",
+       "      <th>25</th>\n",
+       "      <td>The Stones of Blood</td>\n",
+       "      <td>Romana</td>\n",
+       "      <td>As we arrived in modern-day Cornwall, Doctor M...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>The Androids of Tara</td>\n",
+       "      <th>52</th>\n",
+       "      <td>Shada</td>\n",
        "      <td>Romana</td>\n",
-       "      <td>I stayed in the TARDIS while Doctor Master and...</td>\n",
+       "      <td>I accompanied Doctor Master and mistress Roman...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>The Armageddon Factor</td>\n",
+       "      <th>27</th>\n",
+       "      <td>The Stones of Blood</td>\n",
        "      <td>Romana</td>\n",
-       "      <td>The Doctor Master leads a servant of the Shado...</td>\n",
+       "      <td>The Mistress caught Vivien awakening more ston...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
@@ -189,32 +186,32 @@
        "      <td>Grendel then plotted to have Romana pose as St...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>The Stones of Blood</td>\n",
+       "      <th>64</th>\n",
+       "      <td>State of Decay</td>\n",
        "      <td>Romana</td>\n",
-       "      <td>The Mistress caught Vivien awakening more ston...</td>\n",
+       "      <td>I then detected the sound of the scout ship th...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    title mistress  \\\n",
-       "1     The Invisible Enemy    Leela   \n",
-       "30   The Androids of Tara   Romana   \n",
-       "39  The Armageddon Factor   Romana   \n",
-       "35   The Androids of Tara   Romana   \n",
-       "27    The Stones of Blood   Romana   \n",
+       "                   title mistress  \\\n",
+       "25   The Stones of Blood   Romana   \n",
+       "52                 Shada   Romana   \n",
+       "27   The Stones of Blood   Romana   \n",
+       "35  The Androids of Tara   Romana   \n",
+       "64        State of Decay   Romana   \n",
        "\n",
        "                                             synopsis  \n",
-       "1   I was put to the test when the Doctor received...  \n",
-       "30  I stayed in the TARDIS while Doctor Master and...  \n",
-       "39  The Doctor Master leads a servant of the Shado...  \n",
+       "25  As we arrived in modern-day Cornwall, Doctor M...  \n",
+       "52  I accompanied Doctor Master and mistress Roman...  \n",
+       "27  The Mistress caught Vivien awakening more ston...  \n",
        "35  Grendel then plotted to have Romana pose as St...  \n",
-       "27  The Mistress caught Vivien awakening more ston...  "
+       "64  I then detected the sound of the scout ship th...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "32daad40-80dd-4154-87d9-62d2d1d393f7",
    "metadata": {},
    "outputs": [
@@ -245,27 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "81b6c5cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I noticed that the Key to Time locator was giving odd signals that seemed to indicate that the segment was everywhere. Once my master and mistress saw the Captain's trophy room of planets, they concluded that Calufrax was the segment that they were looking for. The Captain's plan was to use the gravitational power of all the crushed worlds to essentially drill a hole through the time dams, bypass its fail-safe mechanism, and let time move forward so the queen dies. \n"
-     ]
-    }
-   ],
-   "source": [
-    "query = \"How many segments does the Key to Time have?\"\n",
-    "data = retrieve_document(query = query)\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "394c8cb0-1360-4c91-9344-e4a8e780f889",
    "metadata": {},
    "outputs": [
@@ -273,11 +250,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Based on the Captain's plan and the information from the trophy room, there are at least seven segments of the Key to Time, with Calufrax being one.\"\n"
+      "K9: \"I was submerged in cold seawater and sparked/exploded.\"\n",
+      "The Ogri were alien beings who fed on blood, as determined by Doctor Master.\n",
+      "K9: \"The Ogri, a Druidic sect worshipping Cailleach, fed on blood.\"\n"
      ]
     }
    ],
    "source": [
+    "query = input(\"Ask question:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f324d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = retrieve_document(query = query)\n",
     "# generate a response combining the prompt and data we retrieved in step 2\n",
     "output = ollama.generate(\n",
     "  model=gen_model,\n",
@@ -286,27 +276,11 @@
     "\n",
     "print(output['response'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee1f2712-678a-40bd-8cea-c1c4660093c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1a4b7fa-bff9-44e1-85cd-cffbf47bfce5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ollama",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
